[gd_scene load_steps=3 format=3 uid="uid://bo612bn8jfsw2"]

[ext_resource type="Script" path="res://Main.gd" id="1_cfhpi"]
[ext_resource type="Script" path="res://WritingArea.gd" id="2_ck2tr"]

[node name="Main" type="Node"]
script = ExtResource("1_cfhpi")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.976471, 0.921569, 0.866667, 1)
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 724.0

[node name="CompletionBar" type="TextureProgressBar" parent="Background/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1280, 40)
layout_mode = 2
max_value = 100000.0

[node name="CompletionBarLabel" type="Label" parent="Background/VBoxContainer/CompletionBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="DeadlineBar" type="TextureProgressBar" parent="Background/VBoxContainer/CompletionBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1280, 10)
layout_mode = 2
offset_right = 1280.0
offset_bottom = 40.0
max_value = 3600.0

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
custom_minimum_size = Vector2(0, 474)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(515, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="FundsLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Funds:"
horizontal_alignment = 2

[node name="FundsAmountLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MotivationLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Motivation:"
horizontal_alignment = 2

[node name="MotivationAmountLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CoffeeLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Coffee:"
horizontal_alignment = 2

[node name="CoffeeAmountLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="WalkTimerLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Walk Timer:"

[node name="WalkTimerAmountLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="KittyAttentionLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Kitty Attention Level:"

[node name="KittyAttentionAmountLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer9" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="GhostWriterLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer9"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Ghost Writer Level:"

[node name="GhostWriterAmountLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer9"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CorruptionLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Corruption:"

[node name="CorruptionAmountLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PayPerWordLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Pay Per Word:"

[node name="PayPerWordAmountLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer8" type="HBoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PurificationPerWordLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer8"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PurificationPerWordAmountLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer8"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="FundsChangeLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="MotivationChangeLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="CoffeeChangeLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="WalkTimerChangeLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="KittyAttentionChangeLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="GhostWriterChangeLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="CorruptionAmountChangeLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="PayPerWordAmountChangeLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="BoxContainer" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
vertical = true

[node name="BuyCoffeeButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="BuyCoffeeMachineButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="TakeWalkButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "Take a walk (10s)"

[node name="BuyKittyButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="PetKittyButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "Pet Kitty (+? attn)"

[node name="GetJobButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "Get Job"

[node name="QuitJobButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "Quit Job"

[node name="BuyAutoTyperButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="UpgradeAutoTyperButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="AcceptPublisherOfferButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
text = "Accept Publisher Offer"

[node name="UpgradePublisherOfferButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="PurificationKeyboardButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="PurificationUpgradeButton" type="Button" parent="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="WritingArea" type="VBoxContainer" parent="Background/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(638, 440)
layout_mode = 2
script = ExtResource("2_ck2tr")

[node name="PromptLabel" type="RichTextLabel" parent="Background/VBoxContainer/HBoxContainer/WritingArea"]
custom_minimum_size = Vector2(638, 31)
layout_mode = 2
bbcode_enabled = true
text = "[center][/center]"
scroll_active = false

[node name="PlayerPreview" type="TextEdit" parent="Background/VBoxContainer/HBoxContainer/WritingArea"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
editable = false
selecting_enabled = false
virtual_keyboard_enabled = false
wrap_mode = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="RoadblockTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="KittyTimeout" type="Timer" parent="."]
wait_time = 30.0

[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/BuyCoffeeButton" to="." method="_on_buy_coffee_button_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/BuyCoffeeMachineButton" to="." method="_on_buy_coffee_machine_button_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/TakeWalkButton" to="." method="_on_take_walk_button_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/BuyKittyButton" to="." method="_on_buy_kitty_button_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/PetKittyButton" to="." method="_on_pet_kitty_button_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/GetJobButton" to="." method="_on_get_job_button_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/QuitJobButton" to="." method="_on_quit_job_button_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/BuyAutoTyperButton" to="." method="_on_buy_auto_typer_button_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/UpgradeAutoTyperButton" to="." method="_on_upgrade_auto_typer_button_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/AcceptPublisherOfferButton" to="." method="_on_accept_publisher_offer_button_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/UpgradePublisherOfferButton" to="." method="_on_upgrade_publisher_offer_button_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/PurificationKeyboardButton" to="." method="_on_purification_keyboard_button_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/PurificationUpgradeButton" to="." method="_on_purification_upgrade_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RoadblockTimer" to="." method="_on_roadblock_timer_timeout"]
